clusters/home/default/homer/99-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-deployment
  namespace: default
  labels:
    app: homer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:v23.10.1
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: homer-assets
          mountPath: /www/assets
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5

      nodeSelector:
        disk: ssd
      volumes:
      - name: homer-assets
        hostPath:
          path: /mnt/shared_data/k8s/homer/assets

---
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  namespace: default
  labels:
    app: homer
spec:
  selector:
    app: homer
  ports:
    - name: panel
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
